Fixes and code smells
- fix for login bg image showing up elsewhere
- fix for code smells
- added font family to nav bar

--- a/src/app/nav-header/nav-header.component.scss
+++ b/src/app/nav-header/nav-header.component.scss
@@ -7,6 +7,11 @@ $bg-color: rgb(22, 27, 34);
     background-color: $bg-color;
 }
 
+.navbar-brand {
+    font-family: "Spartan", sans-serif;
+    font-weight: bold;
+}
+
 .focus-visible:focus {
     visibility: visible;
     color: white;
@@ -32,7 +37,7 @@ $bg-color: rgb(22, 27, 34);
         width: 100%; // 232px
     }
 }
-
+ 
 /* Extra small devices (phones, 300px and down) */
 @media only screen and (max-width: 300px) { //370
     .ng-autocomplete {
