--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,4 +1,4 @@
-<div class="mx-auto">
+<div class="mx-auto login">
     <div class="card p-3" style="width: 18rem;">
         <div class="logo-container">
             <img class="logo" src="assets/images/kavita-book-cropped.png" alt="Kavita logo"/>        
