--- a/src/app/user-login/user-login.component.scss
+++ b/src/app/user-login/user-login.component.scss
@@ -1,6 +1,6 @@
 @import "../../theme/_colors.scss";
 
-.mx-auto {
+.login {
     display: flex;
     align-items: center;
     justify-content: center;
