--- a/src/assets/themes/dark.scss
+++ b/src/assets/themes/dark.scss
@@ -120,7 +120,7 @@ $dark-item-accent-bg: #292d32;
     color: $dark-text-color !important;
   }
 
-  .mx-auto {
+  .login {
 
     &::before {
       content: "";
