--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -8,13 +8,13 @@
         <div class="card-text">
             <form [formGroup]="loginForm" (ngSubmit)="login()">
                 <div class="form-group">
-                    <label>Username</label>
-                    <input class="form-control" formControlName="username" type="text">
+                    <label for="username">Username</label>
+                    <input class="form-control" formControlName="username" id="username" type="text">
                 </div>
                 
                 <div class="form-group">
-                    <label>Password</label>
-                    <input class="form-control" formControlName="password" type="password">
+                    <label for="password">Password</label>
+                    <input class="form-control" formControlName="password" id="password" type="password">
                 </div>
                 
                 <div class="float-right">
