--- a/src/assets/themes/dark.scss
+++ b/src/assets/themes/dark.scss
@@ -124,7 +124,7 @@ $dark-item-accent-bg: #292d32;
 
     &::before {
       content: "";
-      background-image: url('../../assets/images/alfons-morales-YLSwjSy7stw-unsplash-min.jpg');
+      background-image: url('../../assets/images/login-bg.jpg');
       background-size: cover;
       position: absolute;
       top: 0;
