Fixed a bug where after updating certain things within a card on library page, the feeds wouldn't update

--- a/src/app/carousel/carousel-reel/carousel-reel.component.html
+++ b/src/app/carousel/carousel-reel/carousel-reel.component.html
@@ -11,7 +11,7 @@
             [slidesPerView]="'auto'"
             (swiper)="onSwiper($event)"
             [freeMode]="true">
-            <ng-template *ngFor="let item of items; index as i" swiperSlide>
+            <ng-template *ngFor="let item of items; index as i;" swiperSlide>
                 <ng-container [ngTemplateOutlet]="carouselItemTemplate" [ngTemplateOutletContext]="{ $implicit: item, idx: i }"></ng-container>
             </ng-template>
         </swiper>
