added logo and css for logo
- max-height is to prevent the image from increasing the height of the navbar.
- middle middle vertical align didn't look to match up as expected, so a top middle was implemented based on chrome and firefox renderings.

--- a/src/app/nav-header/nav-header.component.scss
+++ b/src/app/nav-header/nav-header.component.scss
@@ -10,6 +10,15 @@ $bg-color: rgb(22, 27, 34);
 .navbar-brand {
     font-family: "Spartan", sans-serif;
     font-weight: bold;
+
+    .logo {
+        max-height: 28px;
+        vertical-align: top;
+    }
+
+    .phone-hidden {
+        vertical-align: middle;
+    }
 }
 
 .focus-visible:focus {
